--- a/KitchenRoutingSystem.Api/KitchenRoutingSystem.Api.csproj
+++ b/KitchenRoutingSystem.Api/KitchenRoutingSystem.Api.csproj
@@ -1,19 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	  <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
-    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.1-dev-00188" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
-    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00905" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
   </ItemGroup>
@@ -21,7 +19,11 @@
   <ItemGroup>
     <ProjectReference Include="..\KitchenRoutingSystem.Domain\KitchenRoutingSystem.Domain.csproj" />
     <ProjectReference Include="..\KitchenRoutingSystem.Infra\KitchenRoutingSystem.Infra.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Desserts\KitchenRoutingSystem.Sector.Desserts.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Drinks\KitchenRoutingSystem.Sector.Drinks.csproj" />
     <ProjectReference Include="..\KitchenRoutingSystem.Sector.Fries\KitchenRoutingSystem.Sector.Fries.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Grill\KitchenRoutingSystem.Sector.Grill.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Salad\KitchenRoutingSystem.Sector.Salad.csproj" />
     <ProjectReference Include="..\KitchenRoutingSystem.Shared\KitchenRoutingSystem.Shared.csproj" />
   </ItemGroup>
 
