--- a/KitchenRoutingSystem.Tests/KitchenRoutingSystem.Tests.csproj
+++ b/KitchenRoutingSystem.Tests/KitchenRoutingSystem.Tests.csproj
@@ -1,7 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector" Version="1.3.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KitchenRoutingSystem.Domain\KitchenRoutingSystem.Domain.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Infra\KitchenRoutingSystem.Infra.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Desserts\KitchenRoutingSystem.Sector.Desserts.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Drinks\KitchenRoutingSystem.Sector.Drinks.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Fries\KitchenRoutingSystem.Sector.Fries.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Grill\KitchenRoutingSystem.Sector.Grill.csproj" />
+    <ProjectReference Include="..\KitchenRoutingSystem.Sector.Salad\KitchenRoutingSystem.Sector.Salad.csproj" />
+  </ItemGroup>
 
 </Project>
