--- a/KitchenRoutingSystem.Api/appsettings.json
+++ b/KitchenRoutingSystem.Api/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": 
+    "DefaultConnection": "Server=localhost;Database=KitchenSystemRouting;user id=sa;Password=SisConvCore20!"
+  },
   "RabbitConfig": {
     "HostName": "localhost",
     "Port": "5672",
