--- a/KitchenRoutingSystem.Api/appsettings.json
+++ b/KitchenRoutingSystem.Api/appsettings.json
@@ -6,7 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ConnectionStrings": 
+  
+  "ConnectionStrings":{ 
     "DefaultConnection": "Server=localhost;Database=KitchenSystemRouting;user id=sa;Password=SisConvCore20!"
   },
   "RabbitConfig": {
