--- a/KitchenRoutingSystem.Infra/KitchenRoutingSystem.Infra.csproj
+++ b/KitchenRoutingSystem.Infra/KitchenRoutingSystem.Infra.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Context\ApplicationContext.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="MediatR" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0" />
@@ -21,6 +26,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KitchenRoutingSystem.Domain\KitchenRoutingSystem.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Context\" />
   </ItemGroup>
 
 </Project>
