--- a/KitchenRoutingSystem.Shared/KitchenRoutingSystem.Shared.csproj
+++ b/KitchenRoutingSystem.Shared/KitchenRoutingSystem.Shared.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Flunt" Version="1.0.5" />
     <PackageReference Include="MediatR" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
