--- a/KitchenRoutingSystem.Domain/KitchenRoutingSystem.Domain.csproj
+++ b/KitchenRoutingSystem.Domain/KitchenRoutingSystem.Domain.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Handlers\ProcessOrderHandlers\" />
     <Folder Include="Strategies\NewFolder\" />
   </ItemGroup>
 
